--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 ==================================== */
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 li {
@@ -15,14 +15,13 @@ a {
  }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
   width: 90%;
   margin: 10px 0;
 }
 
 p {
-  padding: 0 10px;
-  width: 90%;
+  padding: 0 20px;
 }
 
 h2 {
@@ -56,7 +55,7 @@ h2 {
 
 .name a,
 .main-nav a {
-	text-align: center;
+  text-align: center;
   display: block;
 }
 
@@ -86,11 +85,8 @@ h2 {
   float: right;
 }
 
-.right li {
-  display: inline-block;
-}
-
 .right a {
+  display: inline-block;
   color: #000;
 }
 
@@ -136,10 +132,10 @@ h2 {
 
 /* ---- Float clearfix ---- */
 
-	.clearfix::after {
-		content: " ";
-		display: table;
-		clear: both;
+  .clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
   }  
   .main-nav {
     display: block;
@@ -165,17 +161,20 @@ h2 {
   h2, .contact {
     font-size: 1em;
   }
+  p {
+    min-height: 60px;
+  }
   .email, .number, .line {
     font-size: 1.25em;
     margin: 20px auto;
   }
   .line {
-    width: 70%;
+    padding: 20px 120px;
   }
   .main-footer {
     margin-top: 50px
   }
-  .left, .right li {
+  .left, .right a {
     margin: 0 15px;
   }
 }
@@ -193,6 +192,9 @@ h2 {
   .nav2 li {
     float: left;
     width: calc(100% / 3);
+  }
+  p {
+    min-height: 70px;
   }
   .line {
     margin-bottom: 50px;
@@ -212,4 +214,4 @@ h2 {
 
 
 
-	
+  
